[tool.poetry]
name = "resolution-diffusion"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.9.0"
tensorboard = "^2.6.0"
torchvision = "^0.10.0"
tqdm = "^4.62.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[tool.poetry.scripts]
resolution-diffusion = 'resolution_diffusion.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
